iptables-nat
# /etc/network/iptables
# Generated by iptables-save v1.4.21
*nat
:PREROUTING ACCEPT [674:42710]
:INPUT ACCEPT [445:28914]
:OUTPUT ACCEPT [476:30079]
:POSTROUTING ACCEPT [476:30079]
-A POSTROUTING -s 192.168.31.0/24 -o eth0 -j MASQUERADE
COMMIT
# Generated by iptables-save v1.4.21
*filter
:INPUT ACCEPT [603:39874]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2355:597711]
-A INPUT -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 1935 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -j DROP
-A FORWARD -i eth1 -o eth0 -j ACCEPT
-A FORWARD -i eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o eth1 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed
